# monitoramento-rede

./: README.md  docker-compose.yml  selecionar.sql
codagem/: .dockerignore  .env  .gitignore  Cargo.toml  config.toml
codagem/.sqlx/: query-ccf22a9540b172ddedc7c60903fee5bab387fdc6e999a2ff055456a5a30c966a.json  query-e1bc4d8128c75e412bbd1a38466298e3eb295bf8960c7017b05ebd5b9e498fe7.json  query-e312a66dce94f9287e31e212145d03ad2a2c92ded038084c77a9ec561c831f00.json  query-e8e1ba98e3259caa2157e41f713ab8a27ff54b78ce47b2695a01a6fc7c3a644d.json  query-fe3799c041024a389b6f27f84a8624546a708359969e8e43a03c570474443a6c.json
codagem/src/: config.rs  consensus.rs  main.rs  outage.rs  ping.rs  scheduler.rs  storage.rs  types.rs  warmup.rs
docker/: monitor.dockerfile
docker/postgres/: init.sql
scripts_sql_uteis/: delete_all.sql  selecionar.sql
